[package]
name = "cedar-policy-cli"
edition = "2021"

version = "2.3.0"
license = "Apache-2.0"
categories = ["compilers", "config"]
description = "CLI interface for the Cedar Policy language."
keywords = ["cedar", "authorization", "policy", "security"]
homepage = "https://cedarpolicy.com"
repository = "https://github.com/cedar-policy/cedar"

[dependencies]
cedar-policy = { version = "2.3.0", path = "../cedar-policy" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "5.9.0", features = ["fancy"] }

[dependencies.cedar-policy-core]
version = "=2.3.0"
path = "../cedar-policy-core"
features = ["unstable-miette", "unstable-to-cst-err"]

[dependencies.cedar-policy-formatter]
version = "=2.3.0"
path = "../cedar-policy-formatter"
features = ["unstable-miette"]

[dependencies.cedar-policy-validator]
version = "=2.3.0"
path = "../cedar-policy-validator"
features = ["unstable-miette"]

[features]
# `unstable-*` features opt into potentially-breaking API changes that may
# become stable in future releases.
unstable-err-fmt-arg = ["clap/env"]

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3"
glob = "0.3.1"

# We override the name of the binary for src/main.rs, which otherwise would be
# cedar-cli (matching the crate name).
[[bin]]
name = "cedar"
path = "src/main.rs"
